MDEV-7277 Server crashes on creating/opening tables on Windows debug build.         The srid variable was used uninitialised when the field wasn't GIS.         Only problem is that it makes the debugger unhappy. Still added         the initialization.